# 24f-saju

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
fast_api/: Dockerfile  api_app.py  pyproject.toml
saju_rag/: __init__.py  main.py
saju_rag/component/connector/: __init__.py  base.py  job.py  psychology.py  web.py
saju_rag/component/connector/embedding_utils/: load_model.py
saju_rag/component/llm/: gpt.py  lama.py
saju_rag/component/repositories/: elasticsearch.py  es_repository.py  saju_webapi.py
saju_rag/core/entity/: document.py  llm_respone.py  request_entity.py  saju_info.py
saju_rag/core/infra/: es_client.py  gpt_client.py  zenrows.py
saju_rag/core/port/: answer_with_connector_info_port.py  connector.py  connector_provider.py  saju_information_extraction_port.py  select_connector_port.py
saju_rag/core/prompt/: extract_info.prompty  generate_answer.prompty  job_selector.prompty
saju_rag/core/repository/: saju_repo.py
saju_rag/core/usecase/: answer_with_external_info_usecase.py  extract_saju_usecase.py
saju_rag/di/: base.py  config.py
web_front/: Dockerfile  front_app.py  pyproject.toml
web_front/templates/: chat.html  home.html  result.html
