[tool.poetry]
name = "saju_front"
version = "0.1.0"
description = "Deepdaiv Rag core"
authors = ["youngchannel"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "^2.3.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.3"
requests = "^2.31.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
exceptiongroup = "^1.2.2"
dependency-injector = "^4.44.0"
zenrows = "^1.4.0"
openai = "^1.58.1"
tenacity = "^9.0.0"
beautifulsoup4 = "^4.12.3"
pydantic-settings = "^2.7.0"
transformers = "^4.47.1"
torch = "^2.5.1"
scikit-learn = "^1.6.0"
playwright = "^1.49.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
